--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
-                    <div class="mb-2">&copy; All Rights Reserved.</div>
+                    <div class="mb-2">&copy; All Rights Reserved. GoodsCart Co.</div>
                 </div>
             </div>
         </footer>
